--- a/bootstrap/templates/kubernetes/apps/networking/nginx/external/helmrelease.yaml.j2
+++ b/bootstrap/templates/kubernetes/apps/networking/nginx/external/helmrelease.yaml.j2
@@ -35,11 +35,11 @@ spec:
       service:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
-          io.cilium/lb-ipam-ips: "{{ bootstrap_external_nginx_addr }}"
+          io.cilium/lb-ipam-ips: "{{ bootstrap_external_ingress_addr }}"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: external
-        default: true
+        default: false
         controllerValue: k8s.io/external
       admissionWebhooks:
         objectSelector:
