--- a/bootstrap/templates/addons/kube-prometheus-stack/app/helmrelease.yaml.j2
+++ b/bootstrap/templates/addons/kube-prometheus-stack/app/helmrelease.yaml.j2
@@ -10,17 +10,19 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: 52.1.0
+      version: 54.0.0
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
         namespace: flux-system
   maxHistory: 2
   install:
+    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
+    crds: CreateReplace
     remediation:
       retries: 3
   uninstall:
