upstream updates and reorganizations
- cilium loadbalancer mode default to dsr

--- a/bootstrap/templates/kubernetes/apps/kube-system/cilium/app/helm-values.yaml.j2
+++ b/bootstrap/templates/kubernetes/apps/kube-system/cilium/app/helm-values.yaml.j2
@@ -43,7 +43,7 @@ l2announcements:
   #% endif %#
 loadBalancer:
   algorithm: maglev
-  mode: snat
+  mode: "#{ bootstrap_loadbalancer_mode|default('dsr', true) }#"
 localRedirectPolicy: true
 operator:
   replicas: 1
