--- a/bootstrap/templates/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml.j2
+++ b/bootstrap/templates/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml.j2
@@ -27,7 +27,11 @@ spec:
       service:
         annotations:
           lbipam.cilium.io/ips: "#{ bootstrap_cloudflare.ingress_vip }#"
+        #% if bgp.enabled %#
+        externalTrafficPolicy: Local
+        #% else %#
         externalTrafficPolicy: Cluster
+        #% endif %#
       ingressClassResource:
         name: internal
         default: true
