--- a/templates/config/kubernetes/flux/repos/helm/kustomization.yaml.j2
+++ b/templates/config/kubernetes/flux/repos/helm/kustomization.yaml.j2
@@ -5,9 +5,9 @@ kind: Kustomization
 resources:
   - ./bjw-s.yaml
   - ./cilium.yaml
+  - ./controlplaneio.yaml
   - ./coredns.yaml
   - ./external-dns.yaml
-  - ./fluxcd-community.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
   - ./k8s-gateway.yaml
