--- a/templates/config/kubernetes/apps/flux-system/flux-operator/app/kustomization.yaml.j2
+++ b/templates/config/kubernetes/apps/flux-system/flux-operator/app/kustomization.yaml.j2
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: flux-helm-values
+  - name: flux-operator-helm-values
     files:
       - values.yaml=./helm-values.yaml
 configurations:
