--- a/templates/config/kubernetes/apps/flux-system/github/ks.yaml.j2
+++ b/templates/config/kubernetes/apps/flux-system/github/ks.yaml.j2
@@ -3,18 +3,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app coredns
+  name: &app flux-github
   namespace: flux-system
 spec:
-  targetNamespace: kube-system
+  targetNamespace: flux-system
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./kubernetes/apps/kube-system/coredns/app
-  prune: false # never should be deleted
+  path: ./kubernetes/apps/flux-system/github/app
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
+  wait: true
   interval: 30m
   timeout: 5m
