--- a/templates/config/kubernetes/apps/flux-system/kustomization.yaml.j2
+++ b/templates/config/kubernetes/apps/flux-system/kustomization.yaml.j2
@@ -4,4 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./flux/ks.yaml
+  - ./flux-operator/ks.yaml
+  - ./github/ks.yaml
