--- a/templates/config/kubernetes/flux/repos/helm/controlplaneio.yaml.j2
+++ b/templates/config/kubernetes/flux/repos/helm/controlplaneio.yaml.j2
@@ -1,11 +1,11 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: fluxcd-community
+  name: controlplaneio
   namespace: flux-system
 spec:
   type: oci
   interval: 5m
-  url: oci://ghcr.io/fluxcd-community/charts
+  url: oci://ghcr.io/controlplaneio-fluxcd/charts
