cluster-meta refactor, upstream changes

--- a/templates/config/kubernetes/apps/flux-system/flux-operator/instance/helmrelease.yaml.j2
+++ b/templates/config/kubernetes/apps/flux-system/flux-operator/instance/helmrelease.yaml.j2
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: flux-instance
-      version: 0.12.0
+      version: 0.13.0
       sourceRef:
         kind: HelmRepository
         name: controlplaneio
@@ -22,6 +22,9 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: flux-operator
+      namespace: flux-system
   valuesFrom:
     - kind: ConfigMap
       name: flux-instance-helm-values
