--- a/templates/config/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml.j2
+++ b/templates/config/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml.j2
@@ -10,8 +10,8 @@ instance:
   sync:
     kind: GitRepository
     url: "#{ github.address }#"
-    ref: refs/heads/main
-    path: kubernetes/flux/config
+    ref: "refs/heads/#{ github.branch | default('main', true) }#"
+    path: kubernetes/flux/cluster
     #% if github.private_key %#
     pullSecret: github-deploy-key
     #% endif %#
