--- a/templates/config/kubernetes/apps/kube-system/cilium/config/kustomization.yaml.j2
+++ b/templates/config/kubernetes/apps/kube-system/cilium/config/kustomization.yaml.j2
@@ -3,10 +3,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  #% if bgp.enabled %#
-  - ./cilium-l3.yaml
-  #% elif not feature_gates.dual_stack_ipv4_first %#
-  - ./cilium-l2.yaml
-  #% else %#
-  []
+  #% if not dual_stack_ipv4_first %#
+  - ./l2.yaml
   #% endif %#
+  #% if bgp.enabled %#
+  - ./l3.yaml
+  #% endif %#
+  - ./pool.yaml
