--- a/templates/config/kubernetes/flux/meta/repositories/helm/bjw-s.yaml.j2
+++ b/templates/config/kubernetes/flux/meta/repositories/helm/bjw-s.yaml.j2
@@ -1,12 +1,11 @@
-#% if cloudflare.enabled %#
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: ingress-nginx
+  name: bjw-s
   namespace: flux-system
 spec:
-  interval: 1h
-  url: https://kubernetes.github.io/ingress-nginx
-#% endif %#
+  type: oci
+  interval: 5m
+  url: oci://ghcr.io/bjw-s/helm
