--- a/templates/config/kubernetes/flux/meta/repositories/helm/external-dns.yaml.j2
+++ b/templates/config/kubernetes/flux/meta/repositories/helm/external-dns.yaml.j2
@@ -1,10 +1,10 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: openebs
+  name: external-dns
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://openebs.github.io/openebs
+  url: https://kubernetes-sigs.github.io/external-dns
