--- a/templates/config/kubernetes/flux/meta/repositories/helm/ingress-nginx.yaml.j2
+++ b/templates/config/kubernetes/flux/meta/repositories/helm/ingress-nginx.yaml.j2
@@ -1,11 +1,10 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: bjw-s
+  name: ingress-nginx
   namespace: flux-system
 spec:
-  type: oci
-  interval: 5m
-  url: oci://ghcr.io/bjw-s/helm
+  interval: 1h
+  url: https://kubernetes.github.io/ingress-nginx
