--- a/templates/config/kubernetes/flux/meta/repositories/helm/stakater.yaml.j2
+++ b/templates/config/kubernetes/flux/meta/repositories/helm/stakater.yaml.j2
@@ -1,12 +1,11 @@
-#% if cloudflare.enabled %#
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: k8s-gateway
+  name: stakater
   namespace: flux-system
 spec:
-  interval: 1h
-  url: https://ori-edge.github.io/k8s_gateway
-#% endif %#
+  type: oci
+  interval: 5m
+  url: oci://ghcr.io/stakater/charts
